make isMaster in mongos match mongod SERVER-2260